# random_forest_cpp

./: .gitignore  CMakeLists.txt  README.md  demo_random_forest.ipynb  pyproject.toml
dev/python_blueprints/: decisiontree.py
include/myforest/: dataset.h  decisiontree.h  helpers.h  node.h  randomforest.h
python/treelib/: __init__.py
src/: DecisionTree.cpp  RandomForest.cpp  bindings.cpp  dataset.cpp  helpers.cpp  main.cpp  node.cpp
